更新rpc rpc-client rpc-server源码解析

--- a/framework/5. BeanProcessor.md
+++ b/framework/5. BeanProcessor.md
@@ -1294,9 +1294,14 @@ private function newBean(string $beanName, string $id = '')
         // 实例bean对象
         $reflectObject   = $this->newInstance($reflectionClass, $constructArgs);
 
-        // Inject properties values
-        // 注入该代理对象的属性值
-        $this->newProperty($reflectObject, $reflectionClass, $propertyInjects, $id);
+```
+
+​				    // Inject properties values
+​				    // 注入该代理对象的属性值
+​				    $this->newProperty($reflectObject, $reflectionClass, $propertyInjects, $id); //[go](#newProperty) <a name="newPropertyReturn"></a>
+
+```php
+
 
         // Alias
         if (!empty($alias)) {
@@ -1308,15 +1313,169 @@ private function newBean(string $beanName, string $id = '')
         if ($reflectionClass->hasMethod(self::INIT_METHOD)) {
             $reflectObject->{self::INIT_METHOD}();
         }
-
 ```
 
-​				    // 存储bean对象
+​			    // 存储bean对象
 ​				    return $this->setNewBean($beanName, $scope, $reflectObject, $id); // [go](#setNewBean) <a name="setNewBeanReturn"></a>
 
 ```php
 }
 ```
+
+##### 注入属性值 <a name="newProperty"></a> [back](#newPropertyReturn)
+
+```php
+/**
+* Inject properties into this bean. The properties data from config, annotation
+*
+* @param object          $reflectObject
+* @param ReflectionClass $reflectionClass
+* @param array           $propertyInjects
+* @param string          $id
+*
+* @return void
+* @throws ReflectionException
+*/
+private function newProperty(
+    $reflectObject,
+    ReflectionClass $reflectionClass,
+    array $propertyInjects,
+    string $id = ''
+): void {
+    // New parent properties
+    // 获取继承的父类
+    $parentClass = $reflectionClass->getParentClass();
+    if ($parentClass !== false) {
+        $this->newProperty($reflectObject, $parentClass, $propertyInjects, $id);
+    }
+
+    /* @var PropertyInjection $propertyInject */
+    foreach ($propertyInjects as $propertyInject) {
+        $propertyName = $propertyInject->getPropertyName();
+        if (!$reflectionClass->hasProperty($propertyName)) {
+            continue;
+        }
+
+        /** @noinspection PhpUnhandledExceptionInspection */
+        $reflectProperty = $reflectionClass->getProperty($propertyName);
+
+        if ($reflectProperty->isStatic()) {
+            throw new InvalidArgumentException(sprintf('Property %s for bean can not be `static` ', $propertyName));
+        }
+
+        // Parse property value
+        // 获取注入的值
+        $propertyValue = $propertyInject->getValue();
+
+        // Inject interface
+        // 如果注入的值是接口，并且存在，注入接口相关实现类的对象
+        // 声明@Bean注解的类，通过BeanParser解析会将接口和实现类的对应关系保存起来
+        //     /**
+        //     * @var array
+        //     *
+        //     * @example
+        //     * [
+        //     *      'interfaceName' => [
+        //     *          'className' => 'beanName'
+        //     *      ]
+        //     * ]
+        //     */
+        if (is_string($propertyValue) && interface_exists($propertyValue)) {
+```
+
+
+​							// 通过接口获取注入的bean实例，一般来说，类中的属性如果需要自动注入，那么会有@var注解声明注入的接口名称，通过接口从容器中获取对应的bean
+​							$propertyValue = InterfaceRegister::getInterfaceInjectBean($propertyValue); // [go](#getInterfaceInjectBean) <a name="getInterfaceInjectBeanReturn"></a>
+
+```php
+        }
+
+        // 如果注入的属性值是一个数组，那么遍历数组元素，判断每个节点是否是引用值（如果是引用值，通过该字符串会返回对应的配置文件中的值）
+        // 返回处理后的数组
+        if (is_array($propertyValue)) {
+            $propertyValue = $this->newPropertyArray($propertyValue, $id);
+        }
+
+        // 如果本身注入的属性值是一个引用值，那么返回处理后的结果
+        // 处理的内容：如果注入的值是一个字符串，字符串中有 ‘.’ 标识链接，默认通过容器获取config实例，以该字符串为key，取其值
+        if ($propertyInject->isRef()) {
+            $propertyValue = $this->getRefValue($propertyValue, $id);
+        }
+
+        // Parser property type
+        // 获取该属性@var注解对应的值
+        $propertyType = ObjectHelper::getPropertyBaseType($reflectProperty);
+        // 如果@var属性不为空的话，对value对应的类型进行格式化，处理的类型包括 int string bool array float double,如果是对象不做处理
+        if (!empty($propertyType)) {
+            $propertyValue = ObjectHelper::parseParamType($propertyType, $propertyValue);
+        }
+
+        // First, try set value by setter method
+        // 如果该属性有setter方法，那么首先调用setter方法复制
+        $setter = 'set' . ucfirst($propertyName);
+        if (method_exists($reflectObject, $setter)) {
+            $reflectObject->$setter($propertyValue);
+            continue;
+        }
+
+        // 属性不是public，设置为可操作
+        if (!$reflectProperty->isPublic()) {
+            $reflectProperty->setAccessible(true);
+        }
+
+        // Set value by reflection
+        // 给该属性设置值
+        $reflectProperty->setValue($reflectObject, $propertyValue);
+    }
+}
+```
+
+##### 通过接口名回去相应的实现类对应的beanName  [back](#getInterfaceInjectBeanReturn) <a name="getInterfaceInjectBean"> </a>
+
+```php
+/**
+* @param string $interfaceClass
+*
+* @return string
+*/
+public static function getInterfaceInjectBean(string $interfaceClass): string
+{
+    // 目前primaryInterface由@Primary注解去存，但是没看到这个注解在哪里用
+    $primaryClass = self::$primaryInterface[$interfaceClass] ?? '';
+    if (!empty($primaryClass)) {
+        $beanName = self::$interfaces[$interfaceClass][$primaryClass] ?? '';
+        $beanName = empty($beanName) ? $primaryClass : $beanName;
+        return $beanName;
+    }
+
+    // interfaces属性由@Bean注解来存放内容
+    // 当一个类声明了@Bean注解，通过BeanParser解析器会将当前类 【实现的接口】，【实现类（就是声明@bean注解的类）】，bean的name存放到interfaces属性中
+    // 如果由实现了多个接口，那么会循环存放进来
+    // 
+    //     /**
+    //     * @var array
+    //     *
+    //     * @example
+    //     * [
+    //     *      'interfaceName' => [
+    //     *          'className' => 'beanName'
+    //     *      ]
+    //     * ]
+    //     */
+    $classNames = self::$interfaces[$interfaceClass] ?? [];
+    if (empty($classNames)) {
+        throw new RuntimeException(
+            sprintf('Interface(%s) has not inject instance!', $interfaceClass)
+        );
+    }
+    // 取实现类的beanName，如果没有取className
+    $beanName = current($classNames);
+    $beanName = empty($beanName) ? key($classNames) : $beanName;
+    return $beanName;
+}
+```
+
+
 
 ##### 存储Bean对象 <a name="setNewBean"></a> [back](#setNewBeanReturn)
 
@@ -1367,7 +1526,7 @@ private function setNewBean(string $beanName, string $scope, $object, string $id
 public static function newClassName(string $className): string
 {
     // Only proxy AOP class
-    // 只代理AOP类
+    // 只代理AOP类,前面beforeInit方法会搜集需要代理的类
     if (!Aop::matchClass($className)) {
         return $className;
     }
